--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -308,6 +308,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.1.2/ember.prod.js"></script>
     <!-- application -->
     <script type="text/javascript" src="/js/bella.js"></script>
+    <!-- analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-26025686-2', 'enytc.com');
+      ga('send', 'pageview');
+    
+    </script>
 
     </body>
 <!--
